# analysis

./: Dockerfile  README.md  api.py  app.json  docker-compose.yml  pyproject.toml  pytest.ini  scrape.py
alembic/: env.py
alembic/versions/: 0fda6ea241e1_create_account_table.py  7b6c247ac499_remove_hash_id_from_event_versions.py  7e2e13b632cd_create_events.py  a9e0824de944_remove_constraints_from_eventbase.py  dbe870a8f987_create_event_versions.py  e0dc4f56b9d1_require_suggestion_and_revision_on_event.py  e359e36e10ce_add_suggestion_and_revision_to_events.py  ea4302cc7e18_add_logs_and_log_messages.py
api/: main.py
api/models/: BaseModel.py  DetailedEventResponse.py  EventResponse.py  EventReviewRequest.py  EventReviewResponse.py  LogResponse.py  LogWithMessagesResponse.py  PublishedEventResponse.py  __init__.py
app/: main.py  task.py
helpers/: __init__.py  get_database_session.py  hash_from_dict.py  matches_sdgs.py
models/: BaseModel.py  Event.py  EventBase.py  EventSuggestion.py  EventVersion.py  Log.py  LogMessage.py  WithSuggestion.py  __init__.py
scrape/: Parser.py  Scraper.py  items.py  pipelines.py  scrape_log.py  settings.py
scrape/helpers/: EventListingSpiderBase.py  Parser.py  __init__.py  sdg_keyword_patterns.py
scrape/spiders/: DgvnListingSpider.py  Www17ZieleListingSpider.py  __init__.py
tests/: conftest.py  event_versions_test.py  events_test.py
tests/api/: main_test.py
tests/event_suggestions/: core_test.py
tests/event_versions/: core_test.py
tests/events/: core_test.py  discovery_test.py  suggestions_test.py  versioning_test.py
(+36 files in other folders)
