[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Finn Woelm"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.68.1"}
SQLAlchemy = "^1.4.23"
alembic = "^1.7.3"
psycopg2 = "^2.9.1"
sqlalchemy-mixins = "^1.5"
SQLAlchemy-Utils = "^0.37.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
